syntax = "proto3";

package monad_proto.block;

import "basic.proto";
import "quorum_certificate.proto";
import "signing.proto";

message ProtoBlockBody {
  bytes execution_body = 1;
}

message ProtoBlockHeader {
  monad_proto.basic.ProtoNodeId author = 1;
  monad_proto.basic.ProtoEpoch epoch = 2;
  monad_proto.basic.ProtoRound round = 3;
  repeated bytes delayed_execution_results = 4;
  bytes execution_inputs = 10;
  monad_proto.basic.ProtoBlockBodyId block_body_id = 5;
  monad_proto.quorum_certificate.ProtoQuorumCertificate qc = 6;
  monad_proto.basic.ProtoSeqNum seq_num = 8;
  uint64 timestamp = 7;
  monad_proto.signing.ProtoSignature round_signature = 9;
}

message ProtoFullBlock {
    ProtoBlockHeader header = 1;
    ProtoBlockBody body = 2;
}
